--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,13 @@
     "name": "lulububu/favicon-extension",
     "description": "",
     "type": "bolt-extension",
-    "version": "dev-master",
+    "version": "0.1",
     "keywords": [
     ],
     "require": {
-        "bolt/bolt": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7"
+        "bolt/core": "^4.0"
     },
     "license": "MIT",
     "authors": [
@@ -18,21 +17,14 @@
             "email": "joshua@lulububu.de"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Bolt\\Extension\\Lulububu\\FaviconExtension\\": "src"
+            "Lulububu\\FaviconExtension\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Bolt\\Extension\\Lulububu\\FaviconExtension\\Tests\\": "tests",
-            "Bolt\\Tests\\": "vendor/bolt/bolt/tests/phpunit/unit/"
-        }
-    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
-        "bolt-assets": "web",
-        "bolt-class": "Bolt\\Extension\\Lulububu\\FaviconExtension\\FaviconExtension"
+        "entrypoint": "Lulububu\\FaviconExtension\\FaviconExtension"
     }
 }
